--- a/mandelbulber2/formula/ui/mandalay_kifs.ui
+++ b/mandelbulber2/formula/ui/mandalay_kifs.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mandalay_kifs</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -761,10 +761,10 @@
               <number>6</number>
              </property>
              <property name="minimum">
-              <double>-100000.000000000000000</double>
+              <double>-99.989999999999995</double>
              </property>
              <property name="maximum">
-              <double>100000.000000000000000</double>
+              <double>99.989999999999995</double>
              </property>
              <property name="singleStep">
               <double>0.100000000000000</double>
@@ -789,10 +789,10 @@
               <number>6</number>
              </property>
              <property name="minimum">
-              <double>-100000.000000000000000</double>
+              <double>-99.989999999999995</double>
              </property>
              <property name="maximum">
-              <double>100000.000000000000000</double>
+              <double>99.989999999999995</double>
              </property>
              <property name="singleStep">
               <double>0.100000000000000</double>
