--- a/mandelbulber2/formula/ui/riemann_sphere_msltoe_m3d.ui
+++ b/mandelbulber2/formula/ui/riemann_sphere_msltoe_m3d.ui
@@ -249,7 +249,7 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="0">
+     <item row="9" column="0">
       <widget class="QLabel" name="label_148">
        <property name="text">
         <string>w limit:</string>
@@ -326,7 +326,7 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
+     <item row="9" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_8">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -459,7 +459,7 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="10" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetA_1">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -487,10 +487,17 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="0">
+     <item row="10" column="0">
       <widget class="QLabel" name="label_149">
        <property name="text">
         <string>z.z limit:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="Line" name="line_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
