--- a/mandelbulber2/formula/ui/riemann_sphere_msltoe_v1.ui
+++ b/mandelbulber2/formula/ui/riemann_sphere_msltoe_v1.ui
@@ -148,7 +148,7 @@
      <item row="3" column="1">
       <widget class="QLabel" name="label_108">
        <property name="text">
-        <string>Constant Multiplier:</string>
+        <string>Multiplier:</string>
        </property>
       </widget>
      </item>
