--- a/mandelbulber2/formula/ui/box_fold_bulb_pow2_v2.ui
+++ b/mandelbulber2/formula/ui/box_fold_bulb_pow2_v2.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
+ <class>box_fold_bulb_pow2_v2</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
