--- a/mandelbulber2/formula/ui/riemann_sphere_hobold_pow8.ui
+++ b/mandelbulber2/formula/ui/riemann_sphere_hobold_pow8.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
+ <class>riemann_sphere_hobold_pow8</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
