--- a/mandelbulber2/formula/ui/transf_de_linear_cube.ui
+++ b/mandelbulber2/formula/ui/transf_de_linear_cube.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_de_linear_cube</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -32,34 +32,35 @@
    <item>
     <widget class="QLabel" name="label_121">
      <property name="text">
-      <string>DO NOT USE, CURRENTLY FOR TESTING</string>
+      <string>Convert IFS fractals to cubes or spheres.</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_137">
+     <property name="text">
+      <string>Reduce maximum Iterations Rendering Engine tab 
+such that this is the last iteration.</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label_133">
      <property name="text">
-      <string>use constant detail level Rendering Engine tab</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="label_134">
-     <property name="text">
-      <string>reduce maximum Iterations Rendering Engine tab</string>
+      <string>Use constant detail level Rendering Engine tab.</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label_135">
      <property name="text">
-      <string>sometimes disable bailout check on other slots</string>
+      <string>Sometimes disable bailout check on other slots.</string>
      </property>
     </widget>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0">
-     <item row="1" column="1">
+    <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,1">
+     <item row="0" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -87,28 +88,7 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
-       <property name="text">
-        <string>spheres</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_126">
-       <property name="text">
-        <string>shape size, change with iter number</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_127">
-       <property name="text">
-        <string>space</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
+     <item row="1" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_1">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -133,6 +113,27 @@
        </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+       <property name="text">
+        <string>spheres</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_126">
+       <property name="text">
+        <string>size:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_127">
+       <property name="text">
+        <string>space:</string>
        </property>
       </widget>
      </item>
